fix: dialog title align

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -44,3 +44,8 @@ body
 
 .mat-dialog-container
     max-height: 80vh!important
+
+.cdk-global-scrollblock
+    position: initial
+    width: initial
+    overflow: hidden
